WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203486
dumpSpeculation in SpeculatedType.cpp prints to the wrong stream and has wrong capitalization for NaN
https://bugs.webkit.org/show_bug.cgi?id=203486
Summary
dumpSpeculation in SpeculatedType.cpp prints to the wrong stream and has wron...
Tuomas Karkkainen
Reported
2019-10-28 06:53:40 PDT
in void dumpSpeculation(PrintStream& outStream, SpeculatedType value) in SpeculatedType.cpp, "DoubleImpureNan" is printed to out when it should be printed to strOut. also DoubleImpureNan and DoublePureNan should both end with a capital N.
Attachments
proposed patch
(1.38 KB, patch)
2019-10-28 06:58 PDT
,
Tuomas Karkkainen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tuomas Karkkainen
Comment 1
2019-10-28 06:58:05 PDT
Created
attachment 382067
[details]
proposed patch
WebKit Commit Bot
Comment 2
2019-10-28 13:21:55 PDT
Comment on
attachment 382067
[details]
proposed patch Clearing flags on attachment: 382067 Committed
r251667
: <
https://trac.webkit.org/changeset/251667
>
WebKit Commit Bot
Comment 3
2019-10-28 13:21:56 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-10-28 13:28:52 PDT
<
rdar://problem/56682260
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug