dumpSpeculation in SpeculatedType.cpp prints to the wrong stream and has wrong capitalization for NaN https://bugs.webkit.org/show_bug.cgi?id=203486

Patch by Tuomas Karkkainen <tuomas.webkit@apple.com> on 2019-10-28
Reviewed by Antti Koivisto.

* bytecode/SpeculatedType.cpp:
(JSC::dumpSpeculation):

Canonical link: https://commits.webkit.org/216894@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251667 268f45cc-cd09-0410-ab3c-d52691b4dbfc